<resources>
    <string name="app_name">小马音标学习</string>
    <string name="main_discover">发现</string>
    <string name="main_study">学习</string>
    <string name="main_category">微课</string>
    <string name="main_1vs1">我的</string>
    <string name="phonetic_introduce">音标简介</string>
    <string name="international_phonetic_introduce">国际音标简介</string>
    <string name="service_phone">客服电话：</string>
    <string name="service_wechat">客服微信：</string>
    <string name="service_wx">客服微信</string>

    <string name="study_hint">每天十分钟，十天学会音标</string>
    <string name="faying_study">发音学习</string>
    <string name="faying_perception">发音感知</string>
    <string name="faying_practice">发音练习</string>
    <string name="faying_essentials">发音要领</string>
    <string name="faying_apply">发音运用</string>

    <string name="share">分享</string>
    <string name="tint">提示</string>
    <string name="phone_tint">为了给您提供更好的服务，请填写您的联系方式</string>
    <string name="is_exit">是否退出%s？</string>
    <string name="click_to_skip"> 点击跳过 %d</string>
    <string name="wx_circle">朋友圈</string>
    <string name="wx_share">微信</string>
    <string name="share_cancel">取消分享</string>
    <string name="category_total_price">34节微课总价 ¥%1$.1f</string>

    <string-array name="study_apply_array">
        <item>单词</item>
        <item>短语</item>
        <item>句子</item>
    </string-array>

    <!-- 标点符号 -->
    <string-array name="punc_entries">
        <item>有标点</item>
        <item>无标点</item>
    </string-array>
    <string-array name="punc_values">
        <item>1</item>
        <item>0</item>
    </string-array>


    <!-- 语言 -->
    <string-array name="language_entries">
        <item>普通话</item>
        <item>粤语</item>
        <item>英语</item>
    </string-array>
    <string-array name="language_values">
        <item>mandarin</item>
        <item>cantonese</item>
        <item>en_us</item>
    </string-array>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="pref_title_iat_show">显示听写界面</string>

    <string name="pref_key_translate">translate</string>
    <string name="pref_title_translate">翻译</string>

    <string name="evaluating_good_result">%1$s分，good</string>
    <string name="practice_progress">%1$d/3</string>
    <string name="base_refresh_net">重试</string>
    <string name="base_ok">确定</string>
    <string name="cancel">取消</string>
    <string name="vip_equities">会员权益</string>
    <string name="play">播放</string>
    <string name="record">录音</string>
    <string name="playback">回放</string>
    <string name="dredge_vip">开通会员</string>
    <string name="my_order">我的订单</string>
    <string name="share_friend">分享好友</string>
    <string name="balance">余额</string>
    <string name="ali">支付宝</string>
    <string name="wx">微信支付</string>
    <string name="order_sn">订单号</string>
    <string name="order_state">订单状态：</string>
    <string-array name="category_array">
        <item>趣味音标</item>
        <item>自然拼读</item>
        <item>单词记忆</item>
    </string-array>

    <string-array name="study_array">
        <item>音标入门学习</item>
        <item>外教资深教学</item>
    </string-array>
    <string name="privacy_statement">一、介绍\n
1.1我们深知个人信息对您的重要性，并会尽全力保护您的个人信息安全可靠。我们致力于维持您对我们的信任，恪守以下原则，保护您的个人信息：权责一致原则、目的明确原则、选择同意原则、最少够用原则、确保安全原则、主体参与原则、公开透明原则等。同时，我们承诺，我们将按业界成熟的安全标准，采取相应的安全保护措施来保护您的个人信息。\n
1.2我们制定了本隐私政策，向您提供您需要了解的有关我们如何收集和处理信息，并概述您的责任，以帮助您保护自己使用我们的产品的安全。请注意，当我们谈论“服务”时，指的是我们的所有网站，产品和服务。\n
\n二、我们收集的信息以及如何使用它\n
2.1个人信息是指以电子或者其他方式记录的能够单独或者与其他信息结合识别特定自然人身份或者反映特定自然人活动情况的各种信息。\n
2.2为完成登录，我们可能会收集您的手机串号作为用户凭证，将在您使用本服务期间持续授权我们使用。在您注销账号时，我们将停止使用并删除上述信息。\n
2.3我们可能会使用您的联系信息与您就使用体验进行沟通，提供支持。并向您发送其他信息，如产品更新提示、官方公告、帐号安全警报等。\n
\n三、保证您的信息安全\n
3.1APP将数据存储在我们所购买的阿里云有限公司的云服务器中。其先进的安防措施包括防火墙、安全警卫系统及监控系统以尽力确保您的数据免遭自然灾害、人工入侵或其它干扰事故。\n
3.2我们实施了严格的访问控制措施，以限制只有部分员工，才有权访问或查看服务数据。而服务数据仅可用于有效的业务需求，包括但不限于提供用户服务，评估服务性能和使用情况，以及监控和改进基础设施。我们利用非公开协议、防火墙、加密保护和其他标准措施来防止未经授权访问您的信息。\n
3.3在任何情况下，我们都不会将您的数据用于任何目的。\n
3.4我们永远不会销售用户的任何信息。也不会与任何第三方共享信息。\n
\n四、软件权限说明\n
我们对于软件需要在用户使用的设备上获取的权限非常严格和克制。\n
坚决不会要求获取任何隐私权限，例如读取通讯录、获取定位、录音等。\n
\n五、关于集成第三方SDK\n
APP目前已集成友盟统计SDK。\n
\n六、第三方链接\n
当用户访问或使用APP程序及其网站时，我们可能提供到其它第三方网站的链接，软件不对这些网站的隐私准则或内容负责。软件建议您浏览张贴在这些第三方网站上的隐私条款。</string>
    <string name="privacy_title" translatable="false">隐私政策</string>
    <string name="person_info">个人信息</string>
    <string name="system_setting">系统设置</string>
    <string name="phone_num">手机号码</string>
    <string name="modify_pwd">修改密码</string>
    <string name="set_pwd">设置密码</string>
    <string name="version_check">版本检测</string>
    <string name="clear_cache">清除缓存</string>
    <string name="origin_pwd">原密码</string>
    <string name="new_pwd">新密码</string>
    <string name="user_policy">
        一、使用协议的接受与修改\n
此协议是用户与本App之间的协议，本App依据此协议为用户提供服务。\n
此协议服务条款构成用户（无论是个人或者单位）使用本App所提供服务之先决条件。如用户不同意此协议服务条款或其随时对其的修改，用户应不使用或主动取消本App提供的服务。用户的使用行为将视为其对此协议服务条款及其随时修改版本的完全接受；\n
这些条款可由本App随时更新，且无需另行通知。修改后的服务条款一旦在本App上公布即取代原来的服务条款，并构成本条款整体之一部分。用户可随时登录本App查阅最新的服务条款。\n
\n二、服务\n
1.用户可使用本App各类表情、上传图片、文字作品等（以下简称“内容”），用户担保对其通过本App上载、传播的内容负全部法律责任。\n
2.用户在此明确陈述并保证对其上载、传播到本App上的所有内容，拥有或取得了所有必要的权力并承担全部的法律责任，包括但不限于：用户有权或已取得必要的许可、授权、准许来使用或授权本App使用所有与上传内容有关的所有专利、商标、商业秘密、版权及其他私有权利；\n
3. 本App并不担保用户上传的所有内容能够通过本App服务为其他用户所获取、浏览，本App没有义务和责任对所有用户上载、传播的内容进行监测；但本App保留根据国家法律、法规的要求对上载、传播的内容进行不定时抽查的权利，并有权在不事先通知的情况下移除违法、侵权的内容。此款的规定并不排除用户对上传内容的版权担保，亦并非表明本App有责任及能力判断用户上传内容的版权归属。\n
\n三、用户注册\n
1.如果用户使用本App进行内容的上载、传播服务，用户需要注册一个账号、密码，并确保注册信息的真实性、正确性及完整性，如果上述注册信息发生变化，用户应及时更改。在安全完成本服务的登记程序并收到一个密码及账号后，用户应维持密码及账号的机密安全。用户应对任何人利用用户的密码及账号所进行的活动负完全的责任，本App无法对非法或未经用户授权使用用户账号及密码的行为做出甄别，因此本App不承担任何责任。在此，用户同意并承诺做到：\n
经本App注册系统完成注册程序并获得本App账号的用户即为本App的正式用户，即获得本App规定用户所应享有的一切权限；本App有权对其正式用户的权限设计进行变更。\n
在用户填写注册资料时，用户要确保所填写的信息是真实有效的。如果因注册信息不真实而引起的问题，并对问题发生所带来的后果，本App不负任何责任。\n\n
用户注册账号时不得以下列内容作为账号名称，如发现用户账号中含有不雅文字或不恰当名称的，本App保留取消其用户资格的权利。\n
除此协议注明之服务条款外，其他一切因使用本App而引致之任何意外、疏忽、合约毁坏、诽谤、版权或其他知识产权侵犯及其所造成的损失（包括但不限于因下载而感染电脑病毒）， 本App概不负责，亦不承担任何法律责任。\n
(1)请勿以党和国家领导人或其他社会名人的真实姓名、字号、艺名、笔名注册；\n
(2)请勿以国家机构或其他机构的名称注册；\n
(3)请勿注册不文明、不健康名字，或包含歧视、侮辱、猥亵类词语的账号；\n
(4)请勿注册易产生歧义、引起他人误解或其它不符合法律法规、规章制度等规定的账号。\n
2. 账号所有权归本APP所有，用户完成申请注册手续后，获得账号的有限使用权。\n
3. 账号使用权仅属于初始申请注册人，禁止赠与、借用、租用、转让或售卖。如果发现使用者并非账号初始注册人，本App有权在未经通知的情况下回收该账号而无需向该账号使用人承担法律责任，由此带来的包括并不限于用户资料等清空等损失由用户自行承担。本App禁止用户私下有偿或无偿转让账号，以免因账号此产生纠纷，用户应当自行承担因违反此要求而遭致的任何损失，同时本App保留追究上述行为人法律责任的权利。\n
4. 用户承担本App账号与密码的保管责任，并就其账号及密码项下之一切活动负全部责任。用户须重视本App账号密码和公开邮箱的密码保护。用户同意如发现他人未经许可使用其账号时立即通知本App。\n
5. 用户账号在丢失或遗忘密码后，须遵照本App的申诉途径及时申诉请求找回账号。用户应不断提供能增加账号安全性的个人密码保护资料。用户可以凭初始注册资料及个人密码保护资料填写申诉单向本App申请找回账号，本App的密码找回机制仅负责识别申诉单上所填资料与系统记录资料的正确性，而无法识别申诉人是否系真正账号使用人。对用户因被他人冒名申诉而致的任何损失，本App不承担任何责任，用户知晓本App账号及密码保管责任在于用户，本App并不承诺账号丢失或遗忘密码后用户一定能通过申诉找回账号。\n
6. 用户注册本App账号后如果长期不使用，本App有权回收账号，以免造成资源浪费，由此带来的损失由用户自行承担。\n
7. 本着有效利用本App账号资源，保障更多合法用户权益为目的，对于恶意注册或者长期未登录的账号，系统有权回收。\n
\n四、版权声明和责任声明\n
1. 用户上传的内容是指用户在本App上上载、传播的文字、图片、视频、音频或其它任何形式的内容；\n
2. 用户在本App上传或发布内容的，用户应保证其对该等内容享有合法著作权/版权或者相应授权，并且用户同意授予本App对其上传内容的在全球范围内的免费、不可撤销的、无限期的、并且可转让的非独家使用权许可权、复制权、发行权、出租权、展览权、表演权、放映权、广播权、信息网络传播权、摄制权、改编权、翻译权、汇编权、使用权和收益权，本App有权展示、发布及推广前述内容，有权对前述内容进行任何形式的复制、修改、出版、发行及以其他方式使用或者授权第三方进行复制、修改、出版、发行及以其他方式使用；\n
3. 本App在此郑重提醒用户注意，任何经由本App上载、张贴、发送电子邮件或任何其它方式传送的资讯、资料、文字、软件、照片、图形、视讯、信息或其它资料，无论系公开还是私下传送，均由内容提供者、上传者承担责任，本App不承担任何责任；\n
4. 本App无法预先知晓并合理控制经由本App传送之内容，亦无法准确判定内容上传者的真实身份。有鉴于此，用户已预知使用本App时，可能会接触到令人不快、不适当或令人厌恶之内容，用户在此同意放弃由此而产生的针对本App的任何追索权。但本App有权依法停止传输任何前述内容并采取相应行动，包括但不限于暂停用户使用本App的全部或部分功能，保存有关记录，并向有关机关报告；\n
5. 用户需独立对自己在本App上实施的行为承担法律责任。若用户使用本App服务的行为不符合此协议，本App有权做出独立判断，且在无需事先通知的情况下立即取消用户的账号。用户若在本App上散布和传播反动、色情或其他违反国家法律的信息，本App的系统记录有可能作为用户违反法律的证据；\n
6. 因用户进行上述内容在本App的上载、传播而导致任何第三方提出索赔要求或衍生的任何损害或损失，由用户承担全部责任。\n
\n五、第三方链接\n
为方便用户使用，本App可能会提供与第三方国际互联网网站或资源进行链接。除非另有声明，本App无法对第三方网站服务进行控制，用户因使用或依赖上述网站或资源所产生的损失或损害，本App不负担任何责任。\n
\n六、用户行为\n
1. 用户不得使用本App进行任何非法、淫秽、色情及其他违反公序良俗之活动，包括但不限于非法传销、诈骗、侵权、反动行为等，本App有权依据自己的独立判断在不事先通知的情况下立即删除、停止从事此类活动的账号使用；\n
2. 除用户与本App另有约定外，用户同意本App的服务仅供用户个人非商业性质的使用，用户不可对本App服务的任何部分或服务之使用或获得进行复制、拷贝、出售，或利用本App进行调查、广告或其他商业目的，但本App对特定服务另有适用指引或规定的除外。\n
\n七、知识产权及其他权利\n
本App为提供服务而使用的任何软件（包括但不限于软件中所含的任何图像、照片、动画、录像、文字和附加程序、随附的帮助材料）的一切权利均属于该软件的著作权人，未经该软件的著作权人许可，用户不得对该软件进行反向工程、反向编译或反汇编，或以其他方式发现其原始编码。\n
\n八、版权政策\n
本App尊重并采取合理措施保护版权人的合法利益，我们已制定了相应的版权政策与版权投诉机制，该版权政策与投诉机制均构成此协议的有机组成部分。版权政策与投诉机制详情请参考《知识产权声明》。\n
\n九、隐私权政策\n
1.尊重用户个人隐私是本App的一项基本政策。所以，本App在未经用户的授权时不得公开、编辑或透露其注册资料及保存在本App客户端中的非公开内容，除非本App在诚信的基础上认为透露这些信息在以下几种情况是必要的：\n
(1) 遵守有关法律规定，包括在国家有关机关查询时，提供用户在本App上发布的信息内容及其发布时间、互联网地址或者域名。\n
(2) 保持维护本App的知识产权和其他重要权利。\n
(3) 在紧急情况下竭力维护用户个人和社会大众的隐私安全。\n
(4) 根据本条款相关规定或者本App认为必要的其他情况下。\n
2. 但是用户在注册时选择或同意，或用户与本App及合作单位之间就用户个人隐私信息公开或使用另有约定的除外，同时用户应自行承担因此可能产生的任何风险，本App对此不予负责。\n
3. 用户同意个人隐私信息是指那些能够对用户进行个人辨识或涉及个人通信的信息，包括下列信息：用户的姓名，身份证号，手机号码，IP地址，电子邮件地址信息。而非个人隐私信息是指用户对本软件的操作状态以及使用习惯等一些明确且客观反映在本App服务器端的基本记录信息和其他一切个人隐私信息范围外的普通信息。\n
4. 一般而言，本App基于下列原因需要使用到用户的信息资源：(1) 执行软件验证服务。(2)执行软件升级服务。（3）网络同步服务。(4) 提高用户的使用安全性并提供客户支持。（5）因用户使用本软件特定功能或因用户要求本App或合作单位提供特定服务时，本App或合作单位则需要把用户的信息提供给与此相关联的第三方。（6）其他有利于用户和本App利益的。\n
5. 在不透露单个用户隐私资料的前提下，本App有权对整个用户数据库进行分析并对用户数据库进行商业上的利用。\n
\n十、未成年人隐私权的保护\n
1.我们将建立和维持一个合理的程序，以保护未成年人个人资料的保密性及安全性。本App郑重声明：任何18岁以下的未成年人参加网上活动应事先得到家长或其法定监护人（以下统称为"监护人"）的可经查证的同意。\n
2. 监护人应承担保护未成年人在网络环境下的隐私权的首要责任。\n
3. 未经监护人之同意，本App将不会使用未成年人之个人资料，亦不会向任何第三方披露或传送可识别该未成人的个人资料，但是，由于相关法律法规要求、国家机关的查询要求、或在紧急情况下竭力维护用户个人和社会大众的隐私安全等原因除外。\n
4. 本App收集未成年人的个人资料，这些资料只是单纯作为保护未成年人参与网络活动时的安全，而非作为其它目的之利用。本App保证不会要求未成年人提供额外的个人资料，以作为允许其参与网上活动的条件。\n
\n十一、青少年用户特别提示\n
青少年用户必须遵守全国青少年网络文明公约，青少年网友在参与网络活动中注意以下事项，正确学习使用网络，加强自我保护：\n
1. 青少年网友要注意区分网络与现实的区别，避免沉迷于网络而影响了日常的学习生活。\n
2. 网友填写个人资料时，加强个人保护意识，以免不良分子对个人生活造成骚扰。\n
3. 未满18岁青少年应在监护人指导和监督下上网。青少年网友要善于网上学习，不浏览不良信息，要诚实友好交流，不侮辱欺诈他人。\n
4. 青少年网友应增强自我保护意思，避免陌生网友会面或参与联谊活动，以免为不法分子所乘，危及自身。\n
5. 青少年网友要维护网络安全，不破坏网络秩序如有违法行为，本APP保留配合公安和电信部门追查的权利。\n
\n十二、出口与国际使用\n
本App通过中华人民共和国境内的设施提供和控制服务，本App不担保所提供或控制的服务在其他国家或地区是适当的、可行的，任何在其他司法管辖区使用本App的用户应自行确保遵守当地的法律、法规，本App对此不负任何责任。\n
\n十三、服务终止\n
1. 用户同意本App有权基于其自行之考虑，因任何理由，包括但不限于缺乏使用或本App认为用户已经违反此协议的文字及精神，而终止用户的账号或服务之全部或任何部分，并将用户在本App看的服务内的任何内容加以移除并删除；\n
2. 用户同意依此协议任何规定提供之服务，无需进行事先通知即可中断或终止，用户承认并同意，本App可立即关闭或删除用户的账号及用户账号中所有相关信息及文件，及/或禁止继续使用前述文件或本App的服务。 此外，用户同意若本App的服务之使用被中断、终止或用户的账号及相关信息和文件被关闭、删除，本App对用户或任何第三人均不承担任何责任。\n
\n十四、法律适用和管辖\n\n
1. 此协议的生效、履行、解释及争议的解决均适用中华人民共和国法律。\n
2. 如就此协议内容或其执行发生任何争议，应尽量友好协商解决；协商不成时，则争议各方均可向本APP注册所在地具有管辖权的人民法院提起诉讼。\n
3. 本《协议》的一切解释权与修改权归本App所有。\n
    </string>
</resources>
