<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"

    android:paddingTop="@dimen/t15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="分享到"
        android:textColor="@color/black"
        android:textSize="@dimen/t16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/t15dp"
        android:background="@color/gray_f6f6f6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/t15dp"
        android:weightSum="4">

        <LinearLayout
            android:id="@+id/ll_wx"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/wx_share" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/t5dp"
                android:text="@string/wx_share"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_circle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/circlr_share" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/t5dp"
                android:text="@string/wx_circle"
                android:textColor="@color/black" />

        </LinearLayout>




    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/t15dp"
        android:background="@color/gray_f6f6f6" />

    <TextView
        android:id="@+id/tv_cancel_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/t15dp"
        android:paddingBottom="@dimen/t15dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/share_cancel"
        android:textColor="@color/black"
        android:textSize="@dimen/t16sp" />


</LinearLayout>
</layout>